classDiagram
    class CreditCardPayment {
        - cardNumber: String
        - cardHolder: String
        + processPayment(double) void
        + validateCard() boolean
    }
    class IPaymentGateway {
        <<interface>>
        + processPayment(double) void
        + validateCard(String) boolean
        + refund(String) void
    }
    class Order {
        - gateway: PaymentProcessor
        - amount: double
        - orderId: String
        + checkout() void
        + setAmount(double) void
        + getAmount() double
    }
    class PaymentProcessor {
        # processingFee: double
        + processPayment(double) void
        # calculateTotal(double) double
    }
    class PaymentService {
        - creditCardPayment: CreditCardPayment
        - serviceName: String
        + processPayment(double) void
        + validateCard(String) boolean
        + refund(String) void
        + setCreditCardPayment(CreditCardPayment) void
    }
    CreditCardPayment --|> PaymentProcessor : extends
    Order --> PaymentProcessor : association
    PaymentService ..|> IPaymentGateway : implements
    PaymentService --> CreditCardPayment : association
    PaymentService ..> CreditCardPayment : uses
